--- a/COVID-aca.html
+++ b/COVID-aca.html
@@ -48,7 +48,8 @@
 
                             <div class="logo">
                                 <a href="index.html">
-                                    <p style="color:whitesmoke;"><spam><img src = "img/logo.png" width = "100px" ></spam>CWRU Database Group</p>
+                                    <span><img src = "img/logoNew.png" width = "80px" height = "40" ></span>
+                                    <p style="color:whitesmoke;">  CWRU Database Group</p>
                                 </a>
                             </div>
                         </div>
@@ -56,10 +57,10 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="group.html">People</a></li>
                                         <li><a href="proj.html">Research</a></li>
                                         <li><a href="courses.html">Courses</a></li>
-                                        <li><a href="#">News</a></li>
                                         <li><a href="resources.html">Resources</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -219,7 +220,7 @@
             <br>
 
             Citation network - complete [<a
-                href="https://drive.google.com/file/d/1ijcRY29D9-_Nxorjwm9Sf0qTedz_krSu/view?usp=sharing">COVID-academic-complete.zip</a>]
+                href="https://drive.google.com/file/d/1NsdqGAohp_F4xmXTD2khStNIjZBtEGhx/view?usp=sharing">COVID-academic-complete.zip</a>]
             <br>
 
             Semantic network [<a
